--- a/src/components/settingsItem/settingsItem.css
+++ b/src/components/settingsItem/settingsItem.css
@@ -10,6 +10,16 @@
   border-color: var(--settingsItemBorder);
 }
 
+.settings__item.disabled {
+  .settings__item__icon, .react-switch {
+    filter: var(--disabledFilter);
+  }
+
+  .settings__item__title {
+    color: var(--secondaryTextColor);
+  }
+}
+
 .settings__item:first-child {
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
