--- a/src/components/settingsItem/settingsItem.css
+++ b/src/components/settingsItem/settingsItem.css
@@ -33,6 +33,7 @@
 
 .settings__item__title {
   flex-grow: 1;
+  font-size: 18px;
   margin-right: 40px;
   color: var(--settingsItemTitleColor);
 }
