--- a/src/pages/home/bookmarks/bookmarks.css
+++ b/src/pages/home/bookmarks/bookmarks.css
@@ -9,14 +9,13 @@
 	display: flex;
 	flex-flow: column;
 	gap: 20px;
-	padding: 0 15px;
 	overflow-y: auto;
 }
 
 .bookmarks__item {
 	display: flex;
 	flex-flow: column;
-	background-color: var(--darkBackground);
+	background-color: var(--homeGridBackground);
 	padding: 15px;
 	border-radius: 20px;
 }
@@ -34,9 +33,13 @@
 	color: var(--primaryTextColor);
 }
 
+.bookmarks__item__canvas-wrapper {
+	display: grid;
+	place-items: center;
+}
+
 .bookmarks__item__canvas-wrapper canvas {
 	width: 100%;
-	border-radius: 5%;
 }
 
 .bookmarks__empty {
