--- a/src/pages/home/play/play.css
+++ b/src/pages/home/play/play.css
@@ -61,17 +61,10 @@
   transition: background-color 0.5s ease, color 0.5s ease, width 0.5s ease, height 0.5s ease;
 }
 
-.home__play__canvas-wrapper {
-  display: grid;
-	place-items: center;
-  background-color: #344861;
-  border-radius: 6%;
-  padding: 1%;
-}
-
 .home__gameMode canvas {
   width: 70px;
-  border-radius: 5%;
+  border: solid 1px black;
+  border-radius: 8%;
   transition: width 0.5s ease;
 }
 
