--- a/src/index.css
+++ b/src/index.css
@@ -131,6 +131,7 @@ html, body, #root, .app {
   margin: 0;
   width: 100%;
   height: 100%;
+  font-size: 14px;
   font-family: sans-serif;
   user-select: none;
   touch-action: manipulation;
