--- a/src/components/tabSwitcher/tabSwitcher.css
+++ b/src/components/tabSwitcher/tabSwitcher.css
@@ -1,6 +1,10 @@
 .tabSwitcher {
     display: flex;
     align-items: center;
+    background-color: var(--darkBackground);
+    border-radius: 15px;
+    margin: 0 15px;
+    margin-top: 35px;
 }
 
 .tabSwitcher__tab {
@@ -19,9 +23,20 @@
     color: var(--tabSwitcherIconColor);
 }
 
+.tabSwitcher__hole {
+    position: absolute;
+    top: calc(100vh - 112px);
+    left: 50%;
+    transform: translate(-50%, 0);
+    width: 64px;
+    height: 64px;
+    border-radius: 50%;
+    background-color: var(--background);
+}
+
 .tabSwitcher__play-button {
     position: absolute;
-    top: calc(100vh - 80px);
+    top: calc(100vh - 105px);
     left: 50%;
     transform: translate(-50%, 0);
 
