--- a/src/index.css
+++ b/src/index.css
@@ -40,8 +40,9 @@
   --cancelButtonFontWeight: regular;
   --bookmarksEmptyColor: #444444;
   --checkIconColor: white;
+  --tabSwitcherBackground: white;
   --tabSwitcherIconColor: #c7c7c7;
-  --tabSwitcherSelectedTabIconColor: white;
+  --tabSwitcherSelectedTabIconColor: black;
   --carouselDotColor: #c8c8c8;
   --settingsBorderColor: #dddddd;
   --disabledFilter: brightness(1.4);
@@ -84,6 +85,7 @@
   --cancelButtonFontWeight: bold;
   --bookmarksEmptyColor: #616161;
   --checkIconColor: black;
+  --tabSwitcherBackground: #25242c;
   --tabSwitcherIconColor: #616161;
   --tabSwitcherSelectedTabIconColor: white;
   --carouselDotColor: #949494;
