Make touch targets larger

--- a/src/components/tabSwitcher/tabSwitcher.css
+++ b/src/components/tabSwitcher/tabSwitcher.css
@@ -10,6 +10,8 @@
 .tabSwitcher__tab {
     display: grid;
     place-items: center;
+    min-width: 44px;
+    min-height: 44px;
 }
 
 .tabSwitcher__tab.selected {
