--- a/src/components/actionSheet/actionSheet.css
+++ b/src/components/actionSheet/actionSheet.css
@@ -3,18 +3,45 @@
   flex-flow: column;
   align-items: center;
   width: 100%;
+  height: fit-content !important;
+  padding-bottom: 0;
   max-width: 450px;
+}
+
+.action-sheet__handle {
+  background-color: darkgray;
+  width: 50px;
+  height: 6px;
+  border-radius: 3px;
+  margin: 10px 0;
+}
+
+.action-sheet__wrapper.buttonsMode {
+  width: calc(100% - 30px);
+  padding: 0 15px;
+  padding-bottom: 20px;
+}
+
+.action-sheet__content {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  width: 100%;
+  max-width: 450px;
+  background-color: var(--actionSheetBackground);
+  border-radius: 15px;
+  padding-bottom: 10px;
 }
 
 .action-sheet__list {
   display: flex;
   flex-flow: column;
   align-items: center;
-  margin-bottom: 10px;
   width: 100%;
   max-width: 450px;
   background-color: var(--actionSheetBackground);
   border-radius: 15px;
+  margin-bottom: 15px;
 }
 
 .action-sheet__list__title {
