--- a/src/components/editButton/editButton.css
+++ b/src/components/editButton/editButton.css
@@ -1,4 +1,5 @@
 .edit-buttons__button {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -7,7 +8,7 @@
     cursor: pointer;
     color: var(--editButtonColor);
     background-color: var(--editButtonBackground);
-    transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out
 }
 
 .edit-buttons__button.disabled {
