--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,17 +1,19 @@
-#home {
-    height: 100%;
-    overflow: hidden;
-    align-items: center;
-    gap: 20px;
-    padding-top: 0;
-}
-
 .section.home {
+    display: flex;
+    flex-flow: column;
     padding: 0 0 30px 0;
 
     .topbar {
         padding: 5px 15px;
     }
+}
+
+#home {
+    flex-grow: 1;
+    overflow: hidden;
+    align-items: center;
+    gap: 20px;
+    padding-top: 0;
 }
 
 .home__section__title-wrapper {
@@ -27,6 +29,22 @@
     color: var(--primaryTextColor);
     font-size: 28px;
     font-weight: 600;
+}
+
+.home__sudoku-wrapper {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    transition: top 10s cubic-bezier(0.4, 0, 0.8, 1);
+    background-color: var(--background);
+}
+
+.home__sudoku-wrapper.hidden {
+    top: 100vh;
+}
+
+.home__sudoku-wrapper.show {
+    top: 0;
 }
 
 @media (max-height: 600px) {
