--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -14,6 +14,7 @@
     align-items: center;
     gap: 20px;
     padding-top: 0;
+    padding-bottom: 65px;
 }
 
 .home__section__title-wrapper {
@@ -35,16 +36,8 @@
     position: absolute;
     height: 100vh;
     width: 100vw;
-    transition: top 10s cubic-bezier(0.4, 0, 0.8, 1);
     background-color: var(--background);
-}
-
-.home__sudoku-wrapper.hidden {
-    top: 100vh;
-}
-
-.home__sudoku-wrapper.show {
-    top: 0;
+    z-index: 4;
 }
 
 @media (max-height: 600px) {
