--- a/src/components/section/section.css
+++ b/src/components/section/section.css
@@ -7,6 +7,7 @@
     background-color: var(--light-gray);
     height: 100%;
     padding: 7px;
+    padding-top: 0;
     padding-bottom: 25px;
     box-sizing: border-box;
 }
