--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,19 @@
 :root {
-    --themeColor: #2e69f2;
-    --red: #fc5c65;
-    --darkRed: #eb3b5a;
-    --orange: #fd9644;
-    --yellow: #fed330;
-    --green: #26de81;
-    --blueGreen: #2bcbba;
-    --lightBlue: #45aaf2;
-    --darkBlue: #2e69f2;
-    --purple: #a55eea;
     --lightGray: #dce0e6;
     --darkGrayBlue: #344861;
 }
 
 [data-theme='light'] {
-    --background: #e9e9e9;
+    --red: #ff3b30;
+    --orange: #ff9500;
+    --yellow: #ffcc00;
+    --green: #34c759;
+    --blueGreen: #00c7be;
+    --lightBlue: #32ade6;
+    --darkBlue: #007aff;
+    --purple: #af52de;
+
+    --fill: #e9e9e9;
     --darkBackground: white;
     --primaryTextColor: black;
     --secondaryTextColor: #9e9e9e;
@@ -22,35 +21,46 @@
     --secondaryIconColor: #848484;
     --topbarFontColor: var(--darkGrayBlue);
     --bookmarkOffColor: var(--darkGrayBlue);
-    --actionSheetBackground: #eeeef0;
     --actionSheetCancelBackground: white;
     --actionSheetButtonBorder: #d8d8db;
     --contextMenuButtonColor: #505050;
     --contextMenuButtonBackground: #e7e7e7;
     --editButtonColor: var(--themeColor);
     --editButtonBackground: var(--lightGray);
-    --editButtonDisabledFilter: brightness(0.7);
     --numpadButtonBackground: var(--lightGray);
-    --disabledButtonBackground: var(--background);
+    --disabledButtonBackground: var(--fill);
     --disabledButtonBorderColor: transparent;
     --settingsItemBackground: white;
     --settingsItemBorder: var(--lightGray);
     --settingsItemColor: var(--darkGrayBlue);
-    --cancelButtonBackround: white;
-    --cancelButtonFontWeight: regular;
     --bookmarksEmptyColor: #444444;
-    --checkIconColor: white;
     --navbarBackground: white;
     --navbarIconColor: #c7c7c7;
     --navbarSelectedTabIconColor: #444444;
     --carouselDotColor: #c8c8c8;
     --settingsBorderColor: #dddddd;
-    --disabledFilter: brightness(1.4);
-    --navbarBackdropColor: white;
+
+    --editButtonDisabledFilter: brightness(0.7);
+
+    /* This color should be equal to the color of the container behind it */
+    --checkIconColor: white;
+
+    --settingsItemDisabledFilter: brightness(1.4);
+    --navbarBackdropColor: #aaa;
+    --actionSheetBackground: #eeeef0;
 }
 
 [data-theme='dark'] {
-    --background: black;
+    --red: #ff453a;
+    --orange: #ff9f0a;
+    --yellow: #ffd60a;
+    --green: #30d158;
+    --blueGreen: #66d4cf;
+    --lightBlue: #64d2ff;
+    --darkBlue: #0a84ff;
+    --purple: #bf5af2;
+
+    --fill: black;
     --darkBackground: #1c1c1e;
     --primaryTextColor: white;
     --secondaryTextColor: gray;
@@ -67,7 +77,7 @@
     --editButtonBackground: var(--darkBackground);
     --editButtonDisabledFilter: brightness(0.4);
     --numpadButtonBackground: var(--darkBackground);
-    --disabledButtonBackground: var(--background);
+    --disabledButtonBackground: var(--fill);
     --disabledButtonBorderColor: #25242c;
     --canvasLightDefaultCellColor: #25242c;
     --canvasDarkDefaultCellColor: #161620;
@@ -82,8 +92,6 @@
     --settingsItemBackground: #25242c;
     --settingsItemBorder: black;
     --settingsItemTitleColor: white;
-    --cancelButtonBackround: #25242c;
-    --cancelButtonFontWeight: bold;
     --bookmarksEmptyColor: #616161;
     --checkIconColor: black;
     --navbarBackground: #25242c;
@@ -91,7 +99,7 @@
     --navbarSelectedTabIconColor: white;
     --carouselDotColor: #949494;
     --settingsBorderColor: #333333;
-    --disabledFilter: brightness(0.6);
+    --settingsItemDisabledFilter: brightness(0.6);
     --navbarBackdropColor: black;
 }
 
@@ -142,7 +150,7 @@ body,
 }
 
 .app {
-    background-color: var(--background);
+    background-color: var(--fill);
 }
 
 body {
