--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -36,7 +36,7 @@
     position: absolute;
     height: 100vh;
     width: 100vw;
-    background-color: var(--background);
+    background-color: var(--fill);
     z-index: 4;
 }
 
