--- a/src/pages/settings/settings.css
+++ b/src/pages/settings/settings.css
@@ -72,7 +72,7 @@
 }
 
 .settings__section-link__info {
-    color: gray;
+    color: rgba(235, 235, 245, 0.6);
 }
 
 .settings__section-link__icon {
