--- a/src/index.css
+++ b/src/index.css
@@ -143,10 +143,14 @@ body,
     width: 100%;
     height: 100%;
     font-size: 14px;
-    user-select: none;
     touch-action: manipulation;
     scroll-behavior: smooth;
     font-family: -apple-system, system-ui, BlinkMacSystemFont, Inter, sans-serif;
+
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 .app {
